update login response body and swagger doc
